fix status spacing

--- a/wordpress/wp-content/themes/huftgold/sass/_app.scss
+++ b/wordpress/wp-content/themes/huftgold/sass/_app.scss
@@ -263,10 +263,11 @@ p .size-full {
 .format-status {
 	padding: 11% 0;
 	&:first-child {
-		padding: 22% 0 11% 0;
+		padding: 23.5% 0 11% 0;
 	}
 	.entry-content {
 		@include modular('font-size', ms(0), 0, .85);
+		line-height: 1.6;
 		//color: $io;
 		//font-style: italic;
 	}
