--- a/wordpress/wp-content/themes/huftgold/style.css
+++ b/wordpress/wp-content/themes/huftgold/style.css
@@ -2506,19 +2506,20 @@ p .size-full {
   padding: 11% 0; }
   /* line 265, sass/_app.scss */
   .format-status:first-child {
-    padding: 22% 0 11% 0; }
+    padding: 23.5% 0 11% 0; }
   /* line 268, sass/_app.scss */
   .format-status .entry-content {
     font-size: 17px;
-    font-size: 1.7rem; }
-  /* line 273, sass/_app.scss */
+    font-size: 1.7rem;
+    line-height: 1.6; }
+  /* line 274, sass/_app.scss */
   .format-status .entry-footer-meta {
     font-size: 14px;
     font-size: 1.4rem; }
 
 /* =Media
 ----------------------------------------------- */
-/* line 284, sass/_app.scss */
+/* line 285, sass/_app.scss */
 .site-header img,
 .entry-content img,
 .comment-content img,
@@ -2526,7 +2527,7 @@ p .size-full {
   max-width: 100%;
   /* Fluid images for posts, comments, and widgets */ }
 
-/* line 290, sass/_app.scss */
+/* line 291, sass/_app.scss */
 .site-header img,
 .entry-content img,
 img[class*="align"],
@@ -2534,7 +2535,7 @@ img[class*="wp-image-"] {
   height: auto;
   /* Make sure images with WordPress-added height and width attributes are scaled correctly */ }
 
-/* line 295, sass/_app.scss */
+/* line 296, sass/_app.scss */
 .site-header img,
 .entry-content img,
 img.size-full {
@@ -2542,7 +2543,7 @@ img.size-full {
   width: auto;
   /* Prevent stretching of full-size images with height and width attributes in IE8 */ }
 
-/* line 300, sass/_app.scss */
+/* line 301, sass/_app.scss */
 .entry-content img.wp-smiley,
 .comment-content img.wp-smiley {
   border: none;
@@ -2550,47 +2551,47 @@ img.size-full {
   margin-top: 0;
   padding: 0; }
 
-/* line 306, sass/_app.scss */
+/* line 307, sass/_app.scss */
 .wp-caption {
   border: 1px solid #ccc;
   max-width: 100%; }
 
-/* line 312, sass/_app.scss */
+/* line 313, sass/_app.scss */
 .wp-caption.aligncenter,
 .wp-caption.alignleft,
 .wp-caption.alignright {
   margin-bottom: 1.5em; }
 
-/* line 315, sass/_app.scss */
+/* line 316, sass/_app.scss */
 .wp-caption img {
   display: block;
   margin: 1.2% auto 0;
   max-width: 98%; }
 
-/* line 320, sass/_app.scss */
+/* line 321, sass/_app.scss */
 .wp-caption-text {
   text-align: center; }
 
-/* line 323, sass/_app.scss */
+/* line 324, sass/_app.scss */
 .wp-caption .wp-caption-text {
   margin: 0.8075em 0; }
 
-/* line 326, sass/_app.scss */
+/* line 327, sass/_app.scss */
 #content .gallery {
   margin-bottom: 1.5em; }
 
-/* line 331, sass/_app.scss */
+/* line 332, sass/_app.scss */
 #content .gallery a img {
   border: none;
   height: auto;
   max-width: 90%; }
 
-/* line 336, sass/_app.scss */
+/* line 337, sass/_app.scss */
 #content .gallery dd {
   margin: 0; }
 
 /* Make sure embeds and iframes fit their containers */
-/* line 347, sass/_app.scss */
+/* line 348, sass/_app.scss */
 embed,
 iframe,
 object {
@@ -2598,17 +2599,17 @@ object {
 
 /* =Navigation
 ----------------------------------------------- */
-/* line 355, sass/_app.scss */
+/* line 356, sass/_app.scss */
 #content .site-navigation {
   margin: 0 0 1.5em;
   overflow: hidden; }
 
-/* line 359, sass/_app.scss */
+/* line 360, sass/_app.scss */
 #content .nav-previous {
   float: left;
   width: 50%; }
 
-/* line 363, sass/_app.scss */
+/* line 364, sass/_app.scss */
 #content .nav-next {
   float: right;
   text-align: right;
@@ -2616,12 +2617,12 @@ object {
 
 /* =Widgets
 ----------------------------------------------- */
-/* line 372, sass/_app.scss */
+/* line 373, sass/_app.scss */
 .widget {
   margin: 0 0 1.5em; }
 
 /* Search widget */
-/* line 377, sass/_app.scss */
+/* line 378, sass/_app.scss */
 #searchsubmit {
   display: none; }
 
@@ -2630,7 +2631,7 @@ object {
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
-/* line 388, sass/_app.scss */
+/* line 389, sass/_app.scss */
 code[class*="language-"],
 pre[class*="language-"] {
   color: black;
@@ -2648,51 +2649,51 @@ pre[class*="language-"] {
   hyphens: none; }
 
 /* Code blocks */
-/* line 407, sass/_app.scss */
+/* line 408, sass/_app.scss */
 pre[class*="language-"] {
   padding: 1em;
   overflow: auto; }
 
-/* line 413, sass/_app.scss */
+/* line 414, sass/_app.scss */
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
   background: #f5f2f0; }
 
 /* Inline code */
-/* line 418, sass/_app.scss */
+/* line 419, sass/_app.scss */
 :not(pre) > code[class*="language-"] {
   padding: .1em;
   border-radius: .3em; }
 
-/* line 426, sass/_app.scss */
+/* line 427, sass/_app.scss */
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
   color: slategray; }
 
-/* line 430, sass/_app.scss */
+/* line 431, sass/_app.scss */
 .token.punctuation {
   color: #999; }
 
-/* line 434, sass/_app.scss */
+/* line 435, sass/_app.scss */
 .namespace {
   opacity: .7; }
 
-/* line 441, sass/_app.scss */
+/* line 442, sass/_app.scss */
 .token.property,
 .token.tag,
 .token.boolean,
 .token.number {
   color: #905; }
 
-/* line 447, sass/_app.scss */
+/* line 448, sass/_app.scss */
 .token.selector,
 .token.attr-name,
 .token.string {
   color: #690; }
 
-/* line 455, sass/_app.scss */
+/* line 456, sass/_app.scss */
 .token.operator,
 .token.entity,
 .token.url,
@@ -2701,31 +2702,31 @@ pre[class*="language-"] {
   color: #a67f59;
   background: rgba(255, 255, 255, 0.5); }
 
-/* line 462, sass/_app.scss */
+/* line 463, sass/_app.scss */
 .token.atrule,
 .token.attr-value,
 .token.keyword {
   color: #07a; }
 
-/* line 468, sass/_app.scss */
+/* line 469, sass/_app.scss */
 .token.regex,
 .token.important {
   color: #e90; }
 
-/* line 472, sass/_app.scss */
+/* line 473, sass/_app.scss */
 .token.important {
   font-weight: bold; }
 
-/* line 476, sass/_app.scss */
+/* line 477, sass/_app.scss */
 .token.entity {
   cursor: help; }
 
-/* line 479, sass/_app.scss */
+/* line 480, sass/_app.scss */
 pre[data-line] {
   position: relative;
   padding: 1em 0 1em 3em; }
 
-/* line 484, sass/_app.scss */
+/* line 485, sass/_app.scss */
 .line-highlight {
   position: absolute;
   left: 0;
@@ -2742,7 +2743,7 @@ pre[data-line] {
   line-height: inherit;
   white-space: pre; }
 
-/* line 504, sass/_app.scss */
+/* line 505, sass/_app.scss */
 .line-highlight:before,
 .line-highlight[data-end]:after {
   content: attr(data-start);
@@ -2760,7 +2761,7 @@ pre[data-line] {
   text-shadow: none;
   box-shadow: 0 1px white; }
 
-/* line 521, sass/_app.scss */
+/* line 522, sass/_app.scss */
 .line-highlight[data-end]:after {
   content: attr(data-end);
   top: auto;
@@ -2770,24 +2771,24 @@ pre[data-line] {
 Responsive Adjustments
 -----------------------------------------*/
 @media only screen and (max-width: 433px) {
-  /* line 532, sass/_app.scss */
+  /* line 533, sass/_app.scss */
   html {
     font-size: 45%; }
 
-  /* line 535, sass/_app.scss */
+  /* line 536, sass/_app.scss */
   .brand {
     font-size: 26.66667px;
     font-size: 2.66667rem; } }
 @media only screen and (max-width: 521px) and (min-width: 434px) {
-  /* line 541, sass/_app.scss */
+  /* line 542, sass/_app.scss */
   html {
     font-size: 50%; } }
 @media only screen and (max-width: 767px) {
-  /* line 547, sass/_app.scss */
+  /* line 548, sass/_app.scss */
   .sidebar {
     margin: 16px 0;
     position: static; }
 
-  /* line 551, sass/_app.scss */
+  /* line 552, sass/_app.scss */
   .post:first-child {
     padding: 11% 0 22% 0; } }
